# py3data

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-package.yml  re3data-dump.yml
py3data/: __init__.py  api.py  xmltodict.py
tests/: test_api.py  test_data_dump.py
