[project]
name = "py3data"
description = "A flexible and lightweight Python interface to the re3data.org database"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {text = "MIT"}
dependencies = ["requests"]
dynamic = ["version"]
requires-python = ">=3.6"

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["py3data"]

[tool.setuptools_scm]
write_to = "py3data/_version.py"

[tool.ruff]
select = ["E", "F", "UP", "I", "B"]
exclude = ["py3data/xmltodict.py"]

[tool.ruff.isort]
force-single-line = true
